FISH-8259 Improve Dev Mode Fail-Safe Mechanism